<resources>
    <string name="app_name">Story App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_err_length">Password must be 6 character</string>
    <string name="email_err_format">Email is not valid</string>
    <string name="sign_in">Sign In</string>
    <string name="placeholder_email">abc@email.com</string>
    <string name="placeholder_password">Your password</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="full_name">Full name</string>
    <string name="user_profile">user Profile</string>
    <string name="camera">Camera</string>
    <string name="camera_failure">Camera is not found</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="not_have_permission">Not have permission</string>
    <string name="story_image">Story Image</string>
    <string name="story_details">Story Details</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="about_story">About Story</string>
    <string name="detail_location">Detail location is %f, %f</string>
    <string name="add_story">Add Story</string>
    <string name="take_picture">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="your_token">Your token</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="story_is_empty">Story is Empty</string>
    <string name="user_created">User successfully created</string>
    <string name="story_success">Story success uploaded</string>
    <string name="maps">Maps</string>
    <string name="resource_error">Resource not found</string>
    <string name="retry">Try Again</string>
</resources>