<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.add.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".presentation.ui.fragment.add.AddStoryFragment">

        <TextView
            android:id="@+id/textView6"
            style="@style/TitleMedium24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/ivStory"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCamera"
            style="@style/BtnBook16White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="18dp"
            android:text="@string/take_picture"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/blue_700"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/ivStory"
            app:layout_constraintTop_toBottomOf="@+id/ivStory" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGallery"
            style="@style/BtnBook16White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingVertical="18dp"
            android:text="@string/gallery"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/blue_700"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/ivStory"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/ivStory" />

        <com.way.storyapp.presentation.ui.component.CustomEditText
            android:id="@+id/etDescription"
            style="@style/BodyBook15Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="14dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
            app:layout_constraintEnd_toEndOf="@+id/ivStory"
            app:layout_constraintStart_toStartOf="@+id/ivStory"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera"
            app:layout_constraintVertical_bias="0.0" />

        <com.way.storyapp.presentation.ui.component.CustomButton
            android:id="@+id/btnUpload"
            style="@style/BtnBook16White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:enabled="false"
            android:paddingVertical="18dp"
            android:text="@string/upload"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etDescription"
            app:layout_constraintStart_toStartOf="@+id/ivStory" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blue_500"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="205dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>